# DjangoDive

./: .devdbrc  .gitignore  Makefile  README.md  _config.yml  adk.py  anthropic  compose.yml  devserver.sh  index.html  main.py  makefile  manage.py  mcp.py  package-lock.json  postgres-docker-compose.yaml  pyproject.toml  pyrefly.toml  raw.txt
.github/workflows/: django.yml
.idx/: dev.nix
Chapter-1/: pyproject.toml
Chapter-1/blogs/: models.py  views.py
Chapter-1/djangodive/: asgi.py
account/: urls.py  views.py
account/templates/: base.html
blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0002_alter_post_slug_comment.py  0003_comment.py  0003_post_tags.py  0004_post_tags.py
blog/templates/: pagination.html
blog/templatetags/: blog_tags.py
blogs/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment_comment_blogs_comme_created_c5d2ac_idx.py  0004_post_tags.py
blogs/templatetags/: tags.py
dj/: settings.py  urls.py
djangodive/: asgi.py  settings.py  urls.py  wsgi.py
project_blog/: devserver.sh  manage.py
project_blog/blog/: admin.py  feeds.py  models.py
project_blog/djangodive/: settings.py  urls.py  wsgi.py
project_bookmarks/: cert.crt  cert.key  manage.py
project_bookmarks/account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
project_bookmarks/bookmarks/: settings.py  urls.py
project_bookmarks/images/: admin.py  forms.py  (+3 more)
tests/: __init__.py
(+33 files in other folders)
