[project]
name = "django-dive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.6",
    "django-taggit>=6.1.0",
    "markdown>=3.8",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ipython>=9.0.1",
    "ruff>=0.9.9",
]

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "I"
]

[tool.djlint]
profile="django"
