[project]
name = "djangodive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pyrefly>=0.38.2",
    "ruff>=0.14.2",
]

[ruff.lint]
line-length = 120

[tool.ruff.lint]
select = ["I"]