[project]
name = "djangodive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-extensions>=4.1",
    "django-taggit>=6.1.0",
    "markdown>=3.9",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.2.12",
    "pyopenssl>=25.3.0",
    "python-decouple>=3.8",
    "social-auth-app-django>=5.6.0",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "django-language-server>=5.2.3",
    "djlint>=1.36.4",
    "ipython>=9.6.0",
    "pyrefly>=0.38.2",
    "ruff>=0.14.2",
]

[ruff.lint]
line-length = 120

[tool.ruff.lint]
select = ["I"]
